--- a/src/App.css
+++ b/src/App.css
@@ -42,12 +42,23 @@ body {
   width: 5rem;
 }
 
-.add-btn{
+.add-btn, .sort-btn, .pr-btns button{
   background-color: #643579;
   border: none;
   font-weight: 600;
   color: white;
   cursor: pointer;
+}
+
+.sort-btn{
+  width: 4rem;
+  height: 2rem;
+}
+
+.sort-div{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .wish {
@@ -58,6 +69,7 @@ body {
   justify-content: space-between;
   margin-bottom: 0.4%;
   padding: 2%;
+  
 }
 
 .wish-div1{
@@ -74,4 +86,15 @@ margin-right: 2%;
 
 .icon{
   cursor: pointer;
+}
+
+.icon:hover{
+  fill: white;
+}
+
+.pr-btns{
+  display: flex;
+}
+.pr-btns span{
+  margin: 0 0.3rem;
 }
