--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
   justify-content: center;
   align-items: center;
   
-  background-color: #3D1860;
+  background-color: #1f0138;
 }
 
 .container {
@@ -23,6 +23,7 @@ body {
   font-size: 50px;
   font-weight: 700;
   color: white;
+  
 }
 
 .add-item {
@@ -36,6 +37,7 @@ body {
   height: 3rem;
   outline: none;
   border: none;
+  box-shadow: rgba(255, 255, 255, 0.3) 0px 8px 24px;
 }
 
 .priority-input{
@@ -43,7 +45,7 @@ body {
 }
 
 .add-btn, .sort-btn, .pr-btns button{
-  background-color: #643579;
+  background-color: #51156d;
   border: none;
   font-weight: 600;
   color: white;
@@ -59,6 +61,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  margin-top: 2%;
 }
 
 .wish {
@@ -69,7 +72,14 @@ body {
   justify-content: space-between;
   margin-bottom: 0.4%;
   padding: 2%;
-  
+  transition: all 0.2s ease-in-out;
+  box-shadow: rgba(255, 255, 255, 0.2) 0px 8px 24px;
+}
+
+.wish:hover{
+  scale: calc(1.02);
+  background-color: white;
+  color: #191d14;
 }
 
 .wish-div1{
@@ -86,10 +96,6 @@ margin-right: 2%;
 
 .icon{
   cursor: pointer;
-}
-
-.icon:hover{
-  fill: white;
 }
 
 .pr-btns{
